# sql-rocket-start-template

./: Cargo.toml  Database.db  README.md
src/: main.rs  sql_connectivity.rs
templates/: footer.html.hbs  index.html.hbs  layout.html.hbs  nav.html.hbs
